Revert "fix(YSP-627): datetimes now align correctly"
This reverts commit c5f324dc05f674ac9ae448a4bb64c86863118ebf.

--- a/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
+++ b/web/themes/custom/ys_admin_theme/scss/admin-ui.scss
@@ -12,7 +12,3 @@
 .toolbar-horizontal .local-tasks-toolbar-tab .toolbar-menu {
   float: none;
 }
-
-.field--widget-smartdate-inline .field-multiple-table tr .form-item:not(:last-of-type) {
-  margin-bottom: auto !important;
-}
